# rag-sanitizer

./: .gitignore  README.md  USING_THIS.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  langchain_pipeline.py  llamaindex_pipeline.py
rag_sanitizer/: __init__.py  config.py  models.py  patterns.py  sanitizer.py
rag_sanitizer/analyzers/: __init__.py  base.py  density.py  encoding.py  entropy.py  exfiltration.py  injection.py  invisible_text.py
rag_sanitizer/cleaners/: __init__.py  normalize.py  strip.py
rag_sanitizer/integrations/: __init__.py  langchain.py  llamaindex.py
tests/: conftest.py  test_cleaners.py  test_density.py  test_encoding.py  test_entropy.py  test_exfiltration.py  test_injection.py  test_invisible_text.py  test_langchain.py  test_llamaindex.py  test_sanitizer.py
tests/fixtures/: base64_payload.txt  clean_article.txt  density_attack.txt  exfiltration_link.txt  hidden_injection.txt  invisible_text.txt  unicode_smuggling.txt
